SystemUI: Allow listening for face only on pin/pass view
Useful for devices with popup camera

Change-Id: Ifba770dd1681858844d5d0290cbf385bfa47f841
Signed-off-by: Ayan Mukherjee <mukherjeeayan725@gmail.com>

--- a/core/res/res/values/bliss_symbols.xml
+++ b/core/res/res/values/bliss_symbols.xml
@@ -117,4 +117,7 @@
 
     <!-- Custom notification light -->
     <java-symbol type="bool" name="config_multicolorled" />
+
+  <!-- Enable face auth only when swiping security view -->
+  <java-symbol type="bool" name="config_faceAuthOnlyOnSecurityView" />
 </resources>
